<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/wallet"
        android:icon="@drawable/wallet_image"
        android:title="@string/account_menu_wallet"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/debit"
                android:title="@string/account_submenu_wallet_debit" />
            <item
                android:id="@+id/credit"
                android:title="@string/account_submenu_wallet_credit" />
            <item
                android:id="@+id/cache"
                android:title="@string/account_submenu_wallet_cache" />
        </menu>
    </item>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_image"
        android:title="@string/account_menu_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/about_image"
        android:title="@string/account_menu_about"
        app:showAsAction="ifRoom" />

</menu>