<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_profile_title"
            style="@style/TextStyle.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_username" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_profile_title"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="Максим Вишня"
            android:textAlignment="textStart"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="lounah@yandex.ru"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tv_current_major_currency"
            style="@style/TextStyle.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/major_currency" />

        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rg_currencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_below="@id/tv_current_major_currency"
            android:orientation="horizontal"
            android:weightSum="3"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_checked_text_color="@color/white"
            segmentedgroup:sc_corner_radius="2dp"
            segmentedgroup:sc_tint_color="@color/colorAccent">

            <RadioButton
                android:id="@+id/btn_rub"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rub" />

            <RadioButton
                android:id="@+id/btn_eur"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eur" />

            <RadioButton
                android:id="@+id/btn_usd"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usd" />

        </info.hoang8f.android.segmented.SegmentedGroup>
        <TextView
            android:id="@+id/tv_other_settings"
            style="@style/TextStyle.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_currencies"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/other_settings" />

        <TextView
            android:id="@+id/tv_about"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_other_settings"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/about_application"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tv_policy"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/confidentiality_policy"
            android:textAlignment="textStart"
            android:textColor="@color/black" />
    </RelativeLayout>
</ScrollView>